packages/silkenweb/tests/macro-ui/derive-element-non-struct.rs
use silkenweb::Element;

#[derive(Element)]
enum MyElement {}

fn main() {}
